--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "your-homes-diary",
+  "name": "homes-max",
+  "description": "Homes\\Max - Getting the MAX on your home before you buy.",
   "version": "0.1.0",
   "private": true,
   "scripts": {
