--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "homes-max",
-  "description": "Homes\\Max - Getting the MAX on your home before you buy.",
+  "description": "House\\MAX - Getting the MAX on your home before you buy.",
   "version": "0.1.0",
   "private": true,
   "scripts": {
