--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.16",
+    "gray-matter": "^4.0.3",
     "leaflet": "^1.9.4",
+    "marked": "^16.1.0",
     "next": "15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
